# cponysay

./: .gitmodules  Jenkinsfile  Makefile  PKGBUILD  README.md
src/: CMakeLists.txt  main.c
src/scripts/: allponies.sh  parsepony.sh  parsequotes.sh
